--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >
 baseurl:  # the subpath of your site, e.g. /blog/
 url: "http://eugene9212.github.io" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
-logo: "/assets/logo_eug.png"
+logo: "/assets/logo.png"
 
 # Build settings
 markdown: kramdown
